# stock-analysis

./: .claudeignore  .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONFIG.md  GLOSSARY.md  config.json.full  config.json.minimal
examples/: pool_analysis.py  single_stock_analysis.py
src/: __init__.py  main.py
src/conf/: __init__.py  config.py
src/data_kline/: __init__.py  fetcher.py
src/notify/: __init__.py  email_notifier.py
src/strategy/: __init__.py  base.py
src/strategy/buy/: __init__.py  signal_calculator.py
src/strategy/indicator/: __init__.py  price_mean.py  slow_trend_line.py
src/strategy/vba/: __init__.py  vba_func.py
src/visualization/: __init__.py  plotter.py
tests/: test_data_kline.py  test_strategy.py  test_visualization.py
