[project]
name = "stock-analysis"
version = "0.1.0"
description = "数据获取与量化策略分析工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mootdx>=0.11.7",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mplfinance>=0.12.10b0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
